--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     
     "module": "commonjs",                                /* Specify what module code is generated. */
    
+    "jsx": "react",
     
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
    
