--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    
     "aos": "^2.3.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
@@ -18,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.14.4",
     "react-player": "^2.10.0",
+    "react-router-dom": "^6.4.2",
     "reactstrap": "^9.0.2",
     "sass": "^1.50.1",
     "swr": "^1.3.0"
